# hs-picalc-unbound-example

./: .hs-picalc-unbound-example.cabal.swp  IdSubLTS.hs  IdSubLTS.lhs  Main.hs  Makefile  MemoUgly.hs  OpenBisim.hs  OpenBisim.lhs  OpenLTS.hs  OpenLTS.lhs  PiCalc.hs  PiCalc.lhs  README.md  SubstLatt.hs  abstract.tex  biblio.bib  discuss.lhs  exampleFigure.lhs  hs-picalc-unbound-example.cabal  intro.lhs  main.tex  mylhs2tex.lhs  related.tex  stack.yaml
app/: Main.hs
src/: LateLTS.hs  Lib.hs  OpenLTS.hs  PiCalc.hs  SubstLatt.hs
