name:                hs-picalc-unbound-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hs-picalc-unbound-example#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- library
--   hs-source-dirs:
--   exposed-modules:     PiCalc IdSubLTS OpenLTS SubstLatt
--   build-depends:       base >= 4.7 && < 5
--                      , containers
--                      , fgl
--                      , graphviz
--                      , data-partition
--                      , transformers
--                      , unbound
--   default-language:    Haskell2010

executable hs-picalc-unbound-example-exe
  hs-source-dirs:
  main-is:             Main.hs
  other-modules:       PiCalc IdSubLTS OpenLTS OpenBisim SubstLatt MemoUgly
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
--                     , hs-picalc-unbound-example
                     , containers
                     , monadplus
                     , fgl
                     , graphviz
                     , data-partition
                     , data-ordlist
                     , transformers
                     , unbound
                     , pretty
                     , uglymemo
  default-language:    Haskell2010

test-suite hs-picalc-unbound-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-picalc-unbound-example
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hs-picalc-unbound-example
